# edge-wise

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: analyze_request.json  chain_topology.json  sample_topology.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/components/graph/: ForceGraph.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/three/: NetworkAnimation.tsx
frontend/src/components/ui/: Toaster.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  GraphExplorer.tsx  LandingPage.tsx  Leaderboard.tsx  Playground.tsx  Settings.tsx  Simulation.tsx
frontend/src/store/: useStore.test.ts  useStore.ts
smallworld/: __init__.py  cli.py
smallworld/api/: __init__.py  app.py
smallworld/core/: __init__.py  graph_builder.py  metrics.py  shortcut_optimizer.py
smallworld/io/: __init__.py  json_loader.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_api_gamification.py  test_api_websocket.py  test_cli.py  test_coverage_boost.py  test_final_coverage.py  test_full_coverage.py  test_graph_builder.py  test_integration.py  test_json_loader.py  test_metrics.py  test_optimizer.py  test_remaining_coverage.py  test_schemas.py
